<resources>
    <string name="app_name">Clip It</string>
    <string name="version">Version 1.0</string>
    <string name="copyright">\u00a9 2016\u20132017 SimpSolutions.</string>
    <string name="rights">All Rights Reserved</string>
    <string name="license">License</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About Us</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_rate">Rate Us</string>
    <string name="empty_command_toast">Empty field</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>
    <string name="select_video">Select Video</string>
    <string name="exec_command">Execute</string>
    <string name="rdb_title">Convert To</string>
    <string name="spin_title">Format</string>
    <string name="seek_title">Audio Bitrate</string>
    <string name="slide_title">Clip/Trim</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="advance">Advanced Options</string>
    <string-array name="video_containers">
        <item>AVI</item>
        <item>MP4</item>
        <item>MKV</item>
        <item>MOV</item>
        <item>3GP</item>
        <item>FLV</item>
        <item>MPG</item>
        <item>WMV</item>
        <item>OGG</item>
    </string-array>
    <string-array name="audio_containers">
        <item>MP3</item>
        <item>M4A</item>
        <item>FLAC</item>
        <item>AAC</item>
        <item>AMR</item>
        <item>WAV</item>
        <item>AIFF</item>
    </string-array>
    <string name="advanced">Advanced Options</string>
    <string name="advanced_info">Enter options, filename and extension manually.</string>
    <string name="options">Options</string>
    <string name="option_hint">-vn -acodec libmp3lame</string>
    <string name="file_name">File Name</string>
    <string name="filename_hint">yourfile.ext (with extension)</string>
    <string name="submit_advance">Submit Options</string>
    <string name="advanced_instructions">Options must be specified in the same format as ffmpeg software for Windows, Linux and Mac OS.</string>
    <string name="notification">Preview</string>
    <string name="open">Open Outside</string>
    <string name="share">Share File</string>
    <string name="spread_the_word">Spread the Word</string>
    <string name="share_intent_title">WhatsApp</string>
    <string name="share_whatsapp_not_instaled">WhatsApp not installed</string>
    <string name="cat_display">Display</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_summary">Sleep if inactive</string>
    <string name="cat_notif">Notifications</string>
    <string name="vibes">Vibration</string>
    <string name="vibes_summary">Vibrate on task complete</string>
    <string name="ledcolors">Lights</string>
    <string name="ledcolors_summary">Color of notification light : %s</string>
    <string-array name="colors">
        <item>Blue</item>
        <item>Cyan</item>
        <item>Green</item>
        <item>Red</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>
    <string name="feedback">Feedback and Suggessions</string>
    <string name="name_hint">Your Name</string>
    <string name="email_hint">Your Email Address</string>
    <string name="feedback_hint">Write your feedback and suggestions here.</string>
    <string name="submit_feedback">Submit Feedback</string>
</resources>
