<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:title="@string/cat_display">
        
        <SwitchPreference
            android:key="pref_key_clipit_timeout"
            android:summary="@string/timeout_summary"
            android:title="@string/timeout"
            android:defaultValue="false" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/cat_notif" >
    
        <SwitchPreference
            android:key="pref_key_clipit_vibes"
            android:summary="@string/vibes_summary"
            android:title="@string/vibes"
            android:defaultValue="false" />
        
        <ListPreference
            android:key="pref_key_clipit_ledcolors"
            android:summary="@string/ledcolors_summary"
            android:title="@string/ledcolors"
            android:defaultValue="Blue"
            android:entries="@array/colors"
            android:entryValues="@array/colors" />

    </PreferenceCategory>

</PreferenceScreen>