<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvOptions"
        android:text="@string/options"
        android:textColor="#888888"
        android:textSize="15sp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edOptions"
        android:hint="@string/option_hint"
        android:inputType="textMultiLine"
        android:lines="5" 
        android:gravity="top"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFileName"
        android:text="@string/file_name"
        android:textColor="#888888"
        android:textSize="15sp" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edFileName"
        android:hint="@string/filename_hint" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitAdvance"
        android:text="@string/submit_advance"
        android:onClick="onAdvancedOptionsSubmit"
        style="@style/Widget.AppCompat.Button.Colored" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvAdvancedInfo"
        android:textColor="#888888"
        android:textSize="15sp"
        android:text="@string/advanced_instructions"
        android:textStyle="italic"    />
    
</LinearLayout>
