<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/content"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_video"
        android:id="@+id/btnSelectVideo"
        android:onClick="selectVideo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choice"
        android:orientation="vertical"
        android:layout_below="@id/btnSelectVideo"
        android:layout_marginTop="8dp" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvChoice"
            android:text="@string/rdb_title"
            android:textSize="15sp"
            android:textColor="#888888" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/rdbChoice" >
        
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/audio"
                android:text="@string/audio"
                android:onClick="onChoose" />
        
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/video"
                android:text="@string/video"
                android:onClick="onChoose" />
        
        </RadioGroup>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/formatSpinner"
        android:layout_below="@id/choice"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFormat"
            android:text="@string/spin_title"
            android:textSize="15sp"
            android:textColor="#888888" />
        
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/format" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeSlider"
        android:layout_below="@id/formatSpinner"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime"
            android:text="@string/slide_title"
            android:textSize="15sp"
            android:textColor="#888888" />  
        
        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rsbTime"
            rsb:activateOnDefaultValues="true"
            rsb:textAboveThumbsColor="#888888" /> 
            
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bitrateSeekBar"
        android:layout_below="@id/timeSlider"
        android:layout_marginTop="8dp"
        android:orientation="vertical" >
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBitrate"
            android:text="@string/seek_title"
            android:textSize="15sp"
            android:textColor="#888888" /> 
        
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBitrate"
            android:max="128"
            android:paddingRight="8dp"
            android:paddingLeft="8dp" />
            
    </LinearLayout>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exec_command"
        android:id="@+id/btnExecute"
        android:onClick="execute"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_below="@id/bitrateSeekBar" />    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/advanced"
        android:layout_below="@id/btnExecute"
        android:orientation="vertical" >
        
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkAdvanvced"
            android:text="@string/advance"
            android:onClick="onAdvancedSelected" />
    
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvAdvanceInfo"
            android:text="@string/advanced_info"
            android:textStyle="italic"
            android:textSize="15sp"
            android:textColor="#888888" />
            
    </LinearLayout>
    
</RelativeLayout>
