<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCopy"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/copyright"
        android:textColor="#888888"
        android:textSize="20sp" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivIcon"
        android:layout_marginBottom="8dp"
        android:layout_above="@id/tvCopy"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher" />
    
    <TextView        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvVersion"
        android:gravity="center_horizontal"
        android:layout_above="@id/ivIcon"
        android:layout_marginBottom="8dp"
        android:text="@string/version"
        android:textColor="#888888"
        android:textSize="20sp" />
    
    <TextView        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tvVersion"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        android:textColor="#007bb5"
        android:textSize="40sp" />   
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvRights"
        android:layout_below="@id/tvCopy"
        android:gravity="center_horizontal"
        android:text="@string/rights"
        android:textColor="#888888"
        android:textSize="20sp" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvRights"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/license"
        android:textSize="20sp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        
</RelativeLayout>