<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/videoFrame"
            android:foreground="@drawable/ic_media_embed_play"
            android:foregroundGravity="center"
            android:foregroundTint="#0022ff"
            android:clickable="true"
            android:onClick="playContent" >
        
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/videoPlayer" />
    
        </FrameLayout>
    
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOpenFile"
            android:hint="@string/open"
            app:layout_anchor="@id/videoFrame"
            app:layout_anchorGravity="bottom|left|end"
            android:onClick="openFile"
            android:src="@drawable/ic_commit_search_api_mtrl_alpha" />
    
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShareFile"
            android:hint="@string/share"
            app:layout_anchor="@id/videoFrame"
            app:layout_anchorGravity="bottom|right|end"
            android:onClick="shareFile"
            android:src="@drawable/ic_menu_share_holo_dark" />
        
    </android.support.design.widget.CoordinatorLayout>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSpread"
        android:text="@string/spread_the_word"
        android:onClick="spread"
        android:layout_marginTop="50dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />

</LinearLayout>